# rag

./: README.md  docker-compose.yaml  erhfahrungen.md  llm_test.py  pseudo_rag.py  pyproject.toml  rag.py  usecases.md
volumes/config/users.d/: custom_users_config.xml
volumes/data/: status  uuid
volumes/data/data/default/: test
volumes/data/data/system/: asynchronous_metric_log  metric_log  part_log  query_log  session_log  trace_log
volumes/data/metadata/: default  default.sql  system  system.sql
volumes/data/preprocessed_configs/: config.xml  users.xml
volumes/data/store/19a/19a0fd77-d512-4a8a-9b45-76a8dc3854db/: asynchronous_metric_log.sql  metric_log.sql  part_log.sql  query_log.sql  session_log.sql  trace_log.sql
volumes/data/store/19e/19ebfcf1-1163-4881-ab90-954306eb631c/202409_1_51_12/: checksums.txt  columns.txt  data.mrk3  primary.idx
volumes/data/store/4bc/4bcaf5eb-2a55-4908-b478-de63b5e0292a/: test.sql
volumes/data/store/a51/a51efc65-fc44-4803-9d0c-ce07f9ff06af/202409_1_2295_430/: CurrentMetric_AllVectorIndexMemorySize.mrk2  CurrentMetric_BackgroundCommonPoolSize.mrk2  CurrentMetric_BackgroundCommonPoolTask.mrk2  CurrentMetric_BackgroundSchedulePoolTask.mrk2  CurrentMetric_DiskSpaceReservedForMerge.mrk2  CurrentMetric_GlobalThread.mrk2  CurrentMetric_GlobalThreadActive.mrk2  CurrentMetric_LoadedVectorIndexMemorySize.mrk2  CurrentMetric_MarksLoaderThreads.mrk2  CurrentMetric_MarksLoaderThreadsActive.mrk2  CurrentMetric_MemoryTracking.mrk2  CurrentMetric_Merge.mrk2  CurrentMetric_OpenFileForRead.mrk2  CurrentMetric_OpenFileForWrite.mrk2  (+101 more)
(+404 files in other folders)
