[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["noasanto <noa.santo@satellytes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
google-generativeai = "^0.8.2"
langchain-community = "^0.3.1"
pandas = "^2.2.3"
clickhouse-connect = "^0.8.0"
pypdf = "^5.0.0"
numpy = "^1.26.4"
requests = "^2.32.3"
longchain = "^0.4.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
